--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --aot",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
+    "@angular/cli": "~9.1.7",
     "@angular/cdk": "~9.2.1",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
+    "@angular/compiler-cli": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
     "@angular/material": "~9.2.1",
@@ -23,11 +26,16 @@
     "@angular/router": "~9.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~3.8.3"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
+    "@angular-devkit/build-angular": "~0.901.7",
     "@angular/compiler-cli": "~9.1.9",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
