--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
-    "@angular/cli": "~9.1.7",
     "@angular/cdk": "~9.2.1",
+    "@angular/cli": "~9.1.7",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/compiler-cli": "~9.1.9",
@@ -24,22 +24,23 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "express": "^4.17.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "zone.js": "~0.10.2"
   },
   "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "~9.1.7",
-    "@angular-devkit/build-angular": "~0.901.7",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
